feat: 优化模型配置代码&优化向量模型